# prompter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTELLIGENT_INIT_REVISED_PLAN.md  Makefile  PARALLEL_COORDINATOR_FIX.md  PARALLEL_EXECUTION_SUMMARY.md  PARALLEL_EXECUTION_TESTS_FIXED.md  PROGRESS_VISUALIZATION_PLAN.md  PROMPTER_SYSTEM_PROMPT.md  PYTEST_MARKERS_UPDATE_SUMMARY.md  README.md  RELEASE_NOTES_0.8.0.md  RELEASE_NOTES_0.9.0.md  RELEASING.md  STATE_TEST_FIX_SUMMARY.md  TEST_HANG_FIX_SUMMARY.md  TEST_MARKERS_SUMMARY.md  bdd-workflow.toml  example.toml  pyproject.toml  pytest.ini  tox.ini
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
artifacts/: ascii-art-options.md
docs/: PROGRESS_VISUALIZATION.md
examples/: README.md  bdd-workflow.toml  code-review-workflow.toml  continuous-monitoring.toml  parallel-execution.toml  planning-workflow.toml  refactor-codebase.toml  safe-production-deploy.toml  security-audit.toml  task-jumping.toml
scripts/: check_version_sync.py
src/prompter/: __init__.py  __main__.py  cli.py  config.py  constants.py  logging.py  parallel_coordinator.py  progress_display.py  runner.py  state.py  task_graph.py
src/prompter/cli/: arguments.py  main.py
src/prompter/cli/init/: analyzer.py  generator.py
src/prompter/resources/: PROMPTER_SYSTEM_PROMPT.md
src/prompter/utils/: resource_loader.py
tests/: __init__.py  conftest.py  test_allow_infinite_loops.py  test_cli.py  test_config.py  test_helpers.py  test_integration.py  test_logging.py  test_loop_detection_unit.py  test_parallel_demo.py  test_parallel_execution.py  test_parallel_integration.py  test_parallel_integration_simple.py  test_progress_display.py  test_runner.py  test_state.py  test_task_jumping.py
tests/test_init/: __init__.py  test_analyzer.py  test_generator.py  test_interactive.py
